# GobangCat

./: BoardDrawer.cpp  BoardDrawer.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  InfoBoard.cpp  InfoBoard.h  README.md  main.cpp  vcpkg.json
DataHelper/: ChessTree.cpp  ChessTree.h  CountingEvaluator.cpp  CountingEvaluator.h  DataType.cpp  DataType.h  DataType.hpp  ModelChecker.cpp  ModelChecker.h
Document/: doc.md
Player/: ChessTreeRobot.cpp  HumanPlayer.cpp  IPlayer.h
